# tsagentkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  importlinter.ini  main.py  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
benchmarks/: __init__.py
benchmarks/gift_eval/: .gitignore  README.md  RUNBOOK.md  __init__.py  analyze.py  prepare_submission.py  pyproject.toml  run_eval.py
benchmarks/gift_eval/eval/: __init__.py  data_loader.py  predictor.py  runner.py  submission.py
benchmarks/gift_eval/notebooks/: tsagentkit.ipynb  tsagentkit_quick.py
docs/: ADR_001_assembly_first.md  API_STABILITY.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  DESIGN.md  DEV_PLAN_v0.1.md  DEV_PLAN_v0.2.md  DEV_PLAN_v1.0.md  PRD.md  PRD_v2.md  README.md  REBUILD_PLAN.md  RELEASE_V1_1.md  TSFM_SESSION_MODELPOOL_PLAN.md  recipe_verification_report.md
docs/adapters/: CHRONOS.md  MOIRAI.md  TIMESFM.md
docs/hierarchical/: RECONCILIATION.md
docs/recipes/: RECIPE_HIERARCHICAL_FORECASTING.md  RECIPE_TROUBLESHOOTING.md  RECIPE_TSFM_SELECTION.md
docs/v1.1.1/: FINAL_OPTIMIZATION_PLAN.md  planA.md  planB.md  planC.md
skill/: QUICKSTART.md  README.md  SKILL.md  TROUBLESHOOTING.md  recipes.md  tool_map.md
skill/references/: quickstart.md  tool_map.md  troubleshooting.md
skill/scripts/: forecast.py  health_check.py  validate_data.py
src/tsagentkit/: __init__.py  __main__.py  discovery.py  inspect.py  pipeline.py  quickstart.py  repair.py
src/tsagentkit/anomaly/: __init__.py
src/tsagentkit/backtest/: __init__.py  aggregation.py  engine.py  metrics.py  multi_model.py  report.py  splitting.py  window_utils.py
src/tsagentkit/calibration/: __init__.py
src/tsagentkit/contracts/: __init__.py  artifact_payloads.py  errors.py  normalize.py  results.py  schema.py  task_spec.py
src/tsagentkit/core/: __init__.py  config.py  data.py  dataset.py  device.py  errors.py  results.py  types.py
src/tsagentkit/covariates/: __init__.py
src/tsagentkit/eval/: __init__.py
src/tsagentkit/features/: __init__.py  config.py  covariates.py  engine.py  factory.py  matrix.py  tsfeatures.py  tsfeatures_adapter.py  versioning.py
src/tsagentkit/features/extra/: __init__.py  native.py
src/tsagentkit/gift_eval/: __init__.py  data.py  dataset_properties.py  eval.py  predictor.py  score.py
src/tsagentkit/hierarchy/: __init__.py  aggregation.py  evaluator.py  reconciliation.py  structure.py  utils.py
src/tsagentkit/models/: __init__.py  baselines.py  cache.py  ensemble.py  length_utils.py  output_utils.py  per_series.py  protocol.py  registry.py  sktime.py  telemetry.py
src/tsagentkit/monitoring/: __init__.py  alerts.py  coverage.py  drift.py  report.py  stability.py  triggers.py
src/tsagentkit/pipeline/: __init__.py  runner.py  stages.py
src/tsagentkit/qa/: __init__.py
src/tsagentkit/router/: __init__.py  bucketing.py  fallback.py  plan.py  router.py  stats.py  tsfm_policy.py
src/tsagentkit/series/: __init__.py  alignment.py  dataset.py  sparsity.py  validation.py
src/tsagentkit/serving/: __init__.py  execution.py  forecast_postprocess.py  lifecycle.py  model_pool.py  orchestration.py  packaging.py  pipeline.py  provenance.py  refinement.py  result_assembly.py  tsfm_cache.py
src/tsagentkit/skill/: QUICKSTART.md  README.md  TROUBLESHOOTING.md  __init__.py  recipes.md  tool_map.md
src/tsagentkit/time/: __init__.py
src/tsagentkit/utils/: __init__.py  compat.py  quantiles.py  signature.py  temporal.py
tests/: test_cli.py  test_core_config.py  test_core_data.py  test_core_device.py  test_core_errors.py  test_describe.py  test_edge_cases.py  test_inspect.py  test_integration_v1.py  test_model_cache.py  test_models.py  test_optimizations.py  test_phase6_submission_row_count.py  test_pipeline.py  test_pipeline_stages.py  test_qa.py  test_quantiles.py  test_quickstart.py  test_recipe1_retail.py  test_recipe2_industrial.py  test_recipe3_intermittent.py  test_recipe4_custom.py  test_recipe5_backtest.py  test_recipe6_errors.py  test_repair.py  test_results.py  test_router.py  test_tsfm_adapters.py  test_tsfm_integration.py  test_tsfm_policy_matrix.py  test_v02_integration.py  test_v2_ensemble.py
tests/anomaly/: test_detection.py
tests/backtest/: test_engine.py  test_metrics.py  test_report.py
tests/benchmark/: test_performance.py
tests/calibration/: test_calibration.py
tests/ci/: test_real_tsfm_smoke_gate.py  test_standard_pipeline_real_smoke.py  test_tsfm_policy_matrix.py
tests/contracts/: test_artifact_payloads.py  test_errors.py  test_errors_fix_hint.py  test_results.py  test_schema.py  test_task_spec.py
tests/covariates/: test_align_covariates.py
tests/docs/: test_phase6_doc_consistency.py  test_readme_examples.py  test_skill_examples.py
tests/eval/: conftest.py  test_evaluate.py  test_local_score.py  test_phase0_benchmark_baseline.py  test_phase4_benchmark_session_pool.py  test_phase5_fallback_policy.py  test_phase6_run_eval_reuse.py
tests/features/: test_covariates.py  test_factory.py  test_matrix.py  test_tsfeatures_adapter.py  test_versioning.py
tests/hierarchy/: test_aggregation.py  test_evaluator.py  test_reconciliation.py  test_structure.py
tests/models/: test_baselines.py  test_ensemble.py  test_length_utils.py  test_output_utils.py  test_per_series.py  test_sktime_adapter.py
tests/models/adapters/: test_adapters.py  test_base.py  test_chronos_covariates.py  test_moirai_covariates.py  test_patchtst_fm.py  test_timesfm.py  test_tsfm_runtime.py
tests/monitoring/: test_alerts.py  test_coverage.py  test_drift.py  test_stability.py  test_triggers.py
tests/qa/: test_qa.py
tests/router/: test_bucketing.py  test_fallback.py  test_plan.py  test_router.py
tests/series/: test_alignment.py  test_dataset.py  test_sparsity.py
tests/serving/: test_execution.py  test_forecast_postprocess.py  test_lifecycle.py  test_model_pool.py  test_orchestration.py  test_packaging.py  test_provenance.py  test_refinement.py  test_result_assembly.py  test_session.py
tests/time_utils/: test_time_utils.py
tests/utils/: test_quantiles.py  test_signature.py  test_temporal.py
(+16 files in other folders)
