[project]
name = "tsagentkit"
version = "1.0.2"
description = "Robust execution engine for time-series forecasting agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "scipy>=1.11.3,<1.12.0",
    "statsforecast>=1.7.0",
    "utilsforecast>=0.1.0",
    "hierarchicalforecast>=1.0.0",
    "tsfeatures>=0.4.5",
    "torch",
    "huggingface-hub",
    "chronos-forecasting>=2.0.0",
    "timesfm @ git+https://github.com/google-research/timesfm.git",
    "uni2ts",
    "gluonts",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "import-linter>=2.0.0",
]
models = [
    "statsforecast>=1.7.0",
    "utilsforecast>=0.1.0",
    "scipy>=1.11.0",
]
features = [
    "tsfresh>=0.20.0",
    "sktime>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsagentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/tsagentkit --cov-report=term-missing"
markers = [
    "tsfm: real TSFM smoke tests (requires TSFM_RUN_REAL=1 and model dependencies)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.importlinter]
root_packages = ["tsagentkit"]

# Layer 1: Core contracts (bottom layer)
# These should not depend on any other layers
[[tool.importlinter.contracts]]
name = "Core contracts independence"
type = "forbidden"
source_modules = [
    "tsagentkit.contracts",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
    "tsagentkit.router",
    "tsagentkit.backtest",
    "tsagentkit.eval",
    "tsagentkit.calibration",
    "tsagentkit.anomaly",
    "tsagentkit.monitoring",
    "tsagentkit.qa",
    "tsagentkit.hierarchy",
    "tsagentkit.features",
    "tsagentkit.covariates",
    "tsagentkit.series",
    "tsagentkit.time",
]

# Layer 2: Data utilities (no dependency on serving/models)
[[tool.importlinter.contracts]]
name = "Data utilities independence"
type = "forbidden"
source_modules = [
    "tsagentkit.series",
    "tsagentkit.time",
    "tsagentkit.covariates",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
]

# Layer 3: Features (no dependency on serving/models)
[[tool.importlinter.contracts]]
name = "Features independence"
type = "forbidden"
source_modules = [
    "tsagentkit.features",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
]

# Layer 4: Router/Backtest/Eval (no dependency on serving)
[[tool.importlinter.contracts]]
name = "Router and evaluation independence"
type = "forbidden"
source_modules = [
    "tsagentkit.router",
    "tsagentkit.backtest",
    "tsagentkit.eval",
    "tsagentkit.calibration",
    "tsagentkit.anomaly",
]
forbidden_modules = [
    "tsagentkit.serving",
]

# Layer 5: Models (no dependency on serving)
[[tool.importlinter.contracts]]
name = "Models independence"
type = "forbidden"
source_modules = [
    "tsagentkit.models",
]
forbidden_modules = [
    "tsagentkit.serving",
]

[tool.uv.sources]
uni2ts = { git = "https://github.com/SalesforceAIResearch/uni2ts.git" }

# Top layer: Serving is the only orchestrator
# It can depend on all other modules
