[project]
name = "tsagentkit"
version = "1.1.3"
description = "Robust execution engine for time-series forecasting agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "scipy>=1.11.3,<1.12.0",
    "statsforecast>=1.7.0",
    "utilsforecast>=0.1.0",
    # TSFM dependencies (formerly optional)
    "torch",
    "huggingface-hub",
    "transformers>=4.56.0",
    "chronos-forecasting>=2.0.0",
    "tsagentkit-timesfm",
    "tsagentkit-uni2ts",
    "gluonts",
    # Hierarchy dependencies (formerly optional)
    "hierarchicalforecast>=1.0.0",
    # Feature engineering dependencies (formerly optional)
    "tsfeatures>=0.4.5",
    "tsfresh>=0.20.0",
    "sktime>=0.24.0",
    # GIFT-eval dependencies (formerly optional)
    "datasets>=2.14.0",
    "pyarrow>=12.0.0",
    "toolz>=0.12.0",
    "tqdm>=4.65.0",
    # Dev/test dependencies (formerly optional)
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "import-linter>=2.0.0",
]

[project.scripts]
tsagentkit = "tsagentkit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsagentkit"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/benchmarks",
    "/dist",
    "/.uv-cache",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/tsagentkit --cov-report=term-missing"
markers = [
    "tsfm: real TSFM smoke tests (requires TSFM_RUN_REAL=1 and model dependencies)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "normal"
ignore_errors = false
disallow_untyped_defs = false
check_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[[tool.mypy.overrides]]
module = "tsagentkit.contracts.*"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tsagentkit.time.*"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tsagentkit.utils.*"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tsagentkit.models.*"
disallow_untyped_defs = true
check_untyped_defs = true

# Modules not yet type-cleaned - ignore errors for now
[[tool.mypy.overrides]]
module = [
    "tsagentkit.repair",
    "tsagentkit.covariates.*",
    "tsagentkit.backtest.*",
    "tsagentkit.series.*",
    "tsagentkit.monitoring.*",
    "tsagentkit.anomaly.*",
    "tsagentkit.qa.*",
    "tsagentkit.hierarchy.*",
    "tsagentkit.features.*",
    "tsagentkit.router.*",
    "tsagentkit.serving.*",
]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.importlinter]
root_packages = ["tsagentkit"]

# Layer 1: Core contracts (bottom layer)
# These should not depend on any other layers
[[tool.importlinter.contracts]]
name = "Core contracts independence"
type = "forbidden"
source_modules = [
    "tsagentkit.contracts",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
    "tsagentkit.router",
    "tsagentkit.backtest",
    "tsagentkit.eval",
    "tsagentkit.calibration",
    "tsagentkit.anomaly",
    "tsagentkit.monitoring",
    "tsagentkit.qa",
    "tsagentkit.hierarchy",
    "tsagentkit.features",
    "tsagentkit.covariates",
    "tsagentkit.series",
    "tsagentkit.time",
]

# Layer 2: Data utilities (no dependency on serving/models)
[[tool.importlinter.contracts]]
name = "Data utilities independence"
type = "forbidden"
source_modules = [
    "tsagentkit.series",
    "tsagentkit.time",
    "tsagentkit.covariates",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
]

# Layer 3: Features (no dependency on serving/models)
[[tool.importlinter.contracts]]
name = "Features independence"
type = "forbidden"
source_modules = [
    "tsagentkit.features",
]
forbidden_modules = [
    "tsagentkit.serving",
    "tsagentkit.models",
]

# Layer 4: Router/Backtest/Eval (no dependency on serving)
[[tool.importlinter.contracts]]
name = "Router and evaluation independence"
type = "forbidden"
source_modules = [
    "tsagentkit.router",
    "tsagentkit.backtest",
    "tsagentkit.eval",
    "tsagentkit.calibration",
    "tsagentkit.anomaly",
]
forbidden_modules = [
    "tsagentkit.serving",
]

# Layer 5: Models (no dependency on serving)
[[tool.importlinter.contracts]]
name = "Models independence"
type = "forbidden"
source_modules = [
    "tsagentkit.models",
]
forbidden_modules = [
    "tsagentkit.serving",
]

# Top layer: Serving is the only orchestrator
# It can depend on all other modules
