[project]
name = "tsagentkit-gift-eval-benchmark"
version = "0.1.0"
description = "Isolated GIFT-Eval benchmark workspace for local tsagentkit development"
requires-python = ">=3.11"
dependencies = [
    "tsagentkit[tsfm]",
    "datasets>=2.14.0",
    "gluonts>=0.14.3,<0.15",
    "huggingface-hub>=0.16.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "requests>=2.31.0",
    "socksio>=1.0.0",
    "toolz>=0.12.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
tsagentkit = { path = "../..", editable = true }
